--- a/frontend/src/app/components/create-poster/create-poster.component.html
+++ b/frontend/src/app/components/create-poster/create-poster.component.html
@@ -172,6 +172,7 @@
               [parentForm]="posterForm"
               [artists]="artists"
               [filteredArtists]="filteredArtists"
+              [isSearchingArtists]="isSearchingArtists"
               (artistSearch)="filterArtists($event)"
               (addArtist)="addArtist($event)"
               (removeArtist)="removeArtist($event)">
