--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
+@if (!fullscreen) {
+  <app-navbar></app-navbar>
+}
 <main class="content">
   <router-outlet></router-outlet>
 </main>
